--- a/lab1/src/CMakeLists.txt
+++ b/lab1/src/CMakeLists.txt
@@ -19,14 +19,14 @@ set(test_name test)
 if (MSVC)
     # warning level 4 and all warnings as errors
     add_compile_options(/W4 /WX)
-else()
+else ()
     # lots of warnings and all warnings as errors
     add_compile_options(-Wall -Wextra -pedantic -Werror)
-endif()
+endif ()
 
 # описываем основную библиотеку, т.е. библиотеку, содержащую все cpp-файлы, кроме main.cpp
 # TODO: отредактировать список cpp-файлов
-add_library(corelib OBJECT task1.cpp task2.cpp)
+add_library(corelib OBJECT flat_map.cpp)
 
 # описываем исполняемый файл основной программы: это main.cpp + основная библиотека
 add_executable(${exe_name} main.cpp)
@@ -35,18 +35,18 @@ target_link_libraries(${exe_name} corelib)
 # ========== все, что ниже, относится к тестированию при помощи GoogleTest ==========
 
 # скачиваем библиотеку GoogleTest
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  # Specify the commit you depend on and update it regularly.
-  URL https://github.com/google/googletest/archive/58d77fa8070e8cec2dc1ed015d66b454c8d78850.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# описываем исполняемый файл программы для запуска тестов: это cpp-файлы тестов + основная библиотека + библиотека gtest_main
-# наш собственный main.cpp здесь не нужен, т.к. функция main реализована в gtest_main
-add_executable(${test_name} task1_test.cpp task2_test.cpp)
-target_link_libraries(${test_name} gtest_main)
-target_link_libraries(${test_name} corelib)
+#include(FetchContent)
+#FetchContent_Declare(
+#  googletest
+#  # Specify the commit you depend on and update it regularly.
+#  URL https://github.com/google/googletest/archive/58d77fa8070e8cec2dc1ed015d66b454c8d78850.zip
+#)
+## For Windows: Prevent overriding the parent project's compiler/linker settings
+#set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+#FetchContent_MakeAvailable(googletest)
+#
+## описываем исполняемый файл программы для запуска тестов: это cpp-файлы тестов + основная библиотека + библиотека gtest_main
+## наш собственный main.cpp здесь не нужен, т.к. функция main реализована в gtest_main
+#add_executable(${test_name} task1_test.cpp task2_test.cpp)
+#target_link_libraries(${test_name} gtest_main)
+#target_link_libraries(${test_name} corelib)
