--- a/lab1/src/CMakeLists.txt
+++ b/lab1/src/CMakeLists.txt
@@ -11,7 +11,7 @@ project(lab1)
 set(exe_name ${PROJECT_NAME})
 
 # задаем имя исполняемого файла программы для запуска тестов
-set(test_name test)
+set(test_name flat_map_test)
 
 # Включаем отслеживание всех предупреждений (warnings) и запрещаем компиляцию при наличии предупреждений.
 # Считается хорошим тоном, когда программа собирается без предупрреждений.
@@ -29,24 +29,25 @@ endif ()
 add_library(corelib OBJECT flat_map.cpp)
 
 # описываем исполняемый файл основной программы: это main.cpp + основная библиотека
-add_executable(${exe_name} main.cpp)
+add_executable(${exe_name} main.cpp
+        flat_map_test.cc)
 target_link_libraries(${exe_name} corelib)
 
 # ========== все, что ниже, относится к тестированию при помощи GoogleTest ==========
 
 # скачиваем библиотеку GoogleTest
-#include(FetchContent)
-#FetchContent_Declare(
-#  googletest
-#  # Specify the commit you depend on and update it regularly.
-#  URL https://github.com/google/googletest/archive/58d77fa8070e8cec2dc1ed015d66b454c8d78850.zip
-#)
-## For Windows: Prevent overriding the parent project's compiler/linker settings
-#set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-#FetchContent_MakeAvailable(googletest)
-#
-## описываем исполняемый файл программы для запуска тестов: это cpp-файлы тестов + основная библиотека + библиотека gtest_main
-## наш собственный main.cpp здесь не нужен, т.к. функция main реализована в gtest_main
-#add_executable(${test_name} task1_test.cpp task2_test.cpp)
-#target_link_libraries(${test_name} gtest_main)
-#target_link_libraries(${test_name} corelib)
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  # Specify the commit you depend on and update it regularly.
+  URL https://github.com/google/googletest/archive/58d77fa8070e8cec2dc1ed015d66b454c8d78850.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+# описываем исполняемый файл программы для запуска тестов: это cpp-файлы тестов + основная библиотека + библиотека gtest_main
+# наш собственный main.cpp здесь не нужен, т.к. функция main реализована в gtest_main
+add_executable(${test_name} flat_map_test.cc)
+target_link_libraries(${test_name} gtest_main)
+target_link_libraries(${test_name} corelib)
