--- a/lab2/.gitignore
+++ b/lab2/.gitignore
@@ -1,6 +1,8 @@
-.clang-format
-.idea
-'Sound Processor Example Music'
-build.sh
-build
+*
+!*.cpp
+!*.hpp
 
+src/cmake-build-debug/*
+src/*
+build/*
+example_songs/*
