--- a/lab3_new/src/CMakeLists.txt
+++ b/lab3_new/src/CMakeLists.txt
@@ -10,8 +10,10 @@ add_executable(${exe_name} main.cpp
     bomberman_game.cpp
     utils.cpp
     game_logger.cpp
+    special_cell.cpp
     game_objects/player.cpp
     game_objects/bomb.cpp
+    game_objects/wall.cpp
 )
 find_package(SFML 2.5 COMPONENTS system audio REQUIRED)
 
